src/ui/snapshots/kvn_tui__ui__layout__tests__draw_sources_long_address_does_not_hide_name.snap
---
source: src/ui/layout.rs
expression: output
---
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│Standalone profiles (2)               ││                                      │
│├ MyPro... vless  very-long-hostnam...││                                      │
│└ Short    vless  1.1.1.1:443         ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [DNS: DoH] [Global] [Geo: 2026-05-31 13:41]
