src/ui/snapshots/kvn_tui__ui__layout__tests__draw_sources_long_name_truncated.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│Standalone profiles (2)               ││                                      │
│├ VeryLongProfil... vless  1.1.1.1:443││                                      │
│└ Second            vless  2.2.2.2:443││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [Global] [Geo: 2026-05-31 13:41]
