src/ui/snapshots/kvn_tui__ui__layout__tests__draw_theme_settings_overlay_light_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 30)"
---
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│No sources. Press p to paste a profile││                                      │
│or subscription┌ Theme ───────────────────────────────────────┐               │
│               │                 Select theme                 │               │
│               │                                              │               │
│               │                  catppuccin                  │               │
│               │              > catppuccin-latte              │               │
│               │                   ethereal                   │               │
│               │                  everforest                  │               │
│               │                 flexoki-light                │               │
│               │                    gruvbox                   │               │
│               │                   hackerman                  │               │
│               │                   kanagawa                   │               │
│               │                     lumon                    │               │
│               │                  matte-black                 │               │
│               │                    miasma                    │               │
│               │                     nord                     │               │
│               │                  osaka-jade                  │               │
│               │                   retro-82                   │               │
│               │                   ristretto                  │               │
│               │                   rose-pine                  │               │
│               │                  tokyo-night                 │               │
│               │                  vantablack                  │               │
│               │                     white                    │               │
│               │                                              │               │
│               │    j/k navigate, Enter confirm, Esc cancel   │               │
│               │                                              │               │
│               │                                              │               │
└───────────────└──────────────────────────────────────────────┘───────────────┘
[DISCONNECTED] [DNS: DoH] [Global] [Geo: 2026-05-31 13:41]
